--- a/AAA_spr22/Practice_Midterm.tex
+++ b/AAA_spr22/Practice_Midterm.tex
@@ -290,6 +290,19 @@ Practice Midterm
     with $Im f \leq Q \implies Im f = Q$.\\
 
 
+
+    
+\end{homeworkProblem}
+
+\pagebreak
+
+\begin{homeworkProblem}
+    Let $G$ be a group (infinite or finite). Let $A \neq 1$ be an abelian subgroup of $G$
+    such that $\lvert G:A \rvert = 5$.\\
+    Show that $G$ has some nontrivial normal subgroup.\\
+
+    \solution
+    
     Consider the action of $G$ on the set of right cosets of $A: \cR$
     \begin{align}
         G &\xrightarrow[]{\rho} Sym \cR\\
@@ -338,17 +351,6 @@ Practice Midterm
 
 
 
-    
-
-    
-\end{homeworkProblem}
-
-\pagebreak
-
-\begin{homeworkProblem}
-    Let $G$ be a group (infinite or finite). Let $A \neq 1$ be an abelian subgroup of $G$
-    such that $\lvert G:A \rvert = 5$. 
-    Show that $G$ has some nontrivial normal subgroup.
     
 \end{homeworkProblem}
 
