--- a/Graph_Limits_fa21/sheet_04_spectralradius.tex
+++ b/Graph_Limits_fa21/sheet_04_spectralradius.tex
@@ -1,8 +1,7 @@
 \documentclass[12pt]{article}%
 \usepackage{amsfonts}
 \usepackage{fancyhdr}
-\usepackage[a4paper, top=2.5cm, bottom=2.5cm, left=2.2cm, right=2.2cm]%
-{geometry}
+\usepackage[a4paper, top=2.5cm, bottom=2.5cm, left=2.2cm, right=2.2cm]{geometry}
 \usepackage{times}
 \usepackage{amsmath}
 \usepackage{amssymb}
